# Order_book_sensitivities_ML_features

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: EXAMPLE_RESULTS.md  features_cheatsheet.md
scripts/: shap_analysis.py
src/orderbook_liquidity/: __init__.py  cli.py  data_loader.py  depth_features.py  shap_runner.py  triple_barrier.py
tests/: test_depth_features.py
